# app-template

./: .env.example  .env.sandbox1  .env.sandbox2  .gitignore  README.md  docker-compose.yml  init.sql
hello_actix/: Cargo.toml  Dockerfile
hello_actix/src/: dragonballgame.rs  leaderboard.rs  main.rs  xandzero.rs
hello_frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json
hello_frontend/src/: App.css  App.jsx  GameCanvas.jsx  Leaderboard.jsx  XandZeroGame.jsx  main.jsx
infra/: package-lock.json  package.json
infra/lib/: alb-stack.ts  compute-stack.ts  infra-stack.ts  vpc-stack.ts
keycloak/: Dockerfile  realm-export.json
