[package]
name = "app-template-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
redis = { version = "0.24", features = ["tokio-comp"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
actix-web-httpauth = "0.8"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

